[package]
name = "hyper-util_wasi"
version = "0.1.2"
description = "hyper utilities"
readme = "README.md"
homepage = "https://hyper.rs"
documentation = "https://docs.rs/hyper-util"
repository = "https://github.com/hyperium/hyper-util"
license = "MIT"
authors = ["Sean McArthur <sean@seanmonstar.com>"]
keywords = ["http", "hyper", "hyperium"]
categories = ["network-programming", "web-programming::http-client", "web-programming::http-server"]
edition = "2018"

[lib]
name = "hyper_util"
path = "src/lib.rs"

[package.metadata.docs.rs]
features = ["full"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
hyper_wasi = { git = "https://github.com/0xE282B0/hyper", branch = "v1.1.0-WASI", version = "1.1.0", features = ["full"]}
futures-channel = "0.3"
futures-util = { version = "0.3.16", default-features = false }
http = "1.0"
http-body = "1.0.0"
bytes = "1"
pin-project-lite = "0.2.4"
[target.'cfg(not(any(target_arch = "wasm32", target_arch = "wasm64")))'.dependencies]
socket2 = { version = "0.5", optional = true, features = ["all"] }
[target.'cfg(target_os = "wasi")'.dependencies]
wasmedge_wasi_socket = { version = "0.5" }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tokio_wasi = { version = "1", optional = true, features = ["net", "rt", "time"] }
tower-service ={ version = "0.3", optional = true }
tower = { version = "0.4.1", optional = true, features = ["make", "util"] }

[dev-dependencies]
hyper = { version = "1.1.0", features = ["full"] }
bytes = "1"
http-body-util = "0.1.0"
tokio_wasi = { version = "1", features = ["macros", "test-util"] }
pretty_env_logger = "0.5"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dev-dependencies]
pnet_datalink = "0.34.0"

[features]
default = []

# Shorthand to enable everything
full = [
    "client",
    "client-legacy",
    "server",
    "server-auto",
    "service",
    "http1",
    "http2",
    "tokio",
]

client = ["hyper/client", "dep:tower", "dep:tower-service"]
client-legacy = ["client"]

server = ["hyper/server"]
server-auto = ["server", "http1", "http2"]

service = ["dep:tower", "dep:tower-service"]

http1 = ["hyper/http1"]
http2 = ["hyper/http2"]

tokio = ["dep:tokio_wasi", "dep:socket2"]

# internal features used in CI
__internal_happy_eyeballs_tests = []

[[example]]
name = "client"
required-features = ["client-legacy", "http1", "tokio"]
